--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <header>
       <div id="itemsTitleDiv">
         <%= link_to items_path do %><p id="title1">Swedish Club of WA</p>
-        <p id="title2"><i>Club Process System</i></p><% end %>
+        <p id="title2">Club Process System</p><% end %>
       </div>
 	  <div id="timeTab">The current time in Perth is <%= Time.now.strftime("%H:%M %d/%m/%Y") %></div>
       <div id="logoutTab">
