--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -47,6 +47,7 @@ header {
 #title2 {
 	font-weight: 200; 
 	font-size: 220%; 
+	font-style: italic;
 	letter-spacing: -2px; 
 	margin-top: -45px; 
 	margin-left: 100px;
@@ -448,6 +449,10 @@ footer {
 
 #footLink {
 	color: #999999;
+}
+
+#footLink:hover{
+	text-decoration: underline;
 }
 
 /* css for timepicker: http://trentrichardson.com/examples/timepicker/ */
