--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,13 +11,13 @@
   <h1><% if @item.task %><input type="checkbox" class="itemCheckbox"<% if @item.complete %> checked<% end %> disabled /><% end %><%= @item.title %></h1>
   <div class="itemOptions">
     <%= link_to '', edit_item_path(@item.id), class: 'edit', title: 'Edit' %>
-    <a class="set-email" href="#" title="Set Email Reminder" name="<%= @item.id %>"></a>
+    <a class="set-email" href="#item<%= @item.id %>" title="Set Email Reminder" name="<%= @item.id %>"></a>
     <%= link_to '', item_path(@item.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item? (All subchildren will also be deleted)' }, class: 'delete itemDelete', title: 'Delete' %>
   </div>
   <p><%= raw(@item.body) %></p>
   <% unless @item.triggers.empty? %>
   <% @item.triggers.each do |trigger| %> 
-  <% unless trigger.date_trigger < Time.now %>
+  <% unless trigger.date_trigger + 8.hours <= Time.zone.today %>
   <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= trigger.date_trigger.strftime("%d/%m/%Y %H:%M") %> AWST</p>
   <div class = "emailOptions">
 	<%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete', title: 'Cancel' %>
@@ -38,7 +38,7 @@
   <p><%= raw(child.body) %></p>
   <% unless child.triggers.empty? %>
   <% child.triggers.each do |trigger| %> 
-  <% unless trigger.date_trigger < Time.now %>
+  <% unless trigger.date_trigger + 8.hours <= Time.zone.today %>
   <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= trigger.date_trigger.strftime("%d/%m/%Y %H:%M") %> AWST</p>
   <div class = "emailOptions">
     <%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete', title: 'Cancel' %>
