--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,6 +1,11 @@
-<li id="tree<%= item.id %>" name="<%= item.parent_id %>">
-  <%= link_to h(item.title), :controller => 'items', :action => 'show', :id => item.id %>
-  <% if !item.children.empty? %>
-  <ul><%= render :partial => 'items/item', :collection => item.children %></ul>
+<li>
+  <% if item.id == Item.find(params[:id].to_i).root.id %>
+    <b><%= link_to h(item.title), :controller => 'items', :action => 'show', :id => item.id %></b>
+  <% else %>
+    <%= link_to h(item.title), :controller => 'items', :action => 'show', :id => item.id %>
+  <% end %>
+
+  <% if item.root.id == Item.find(params[:id].to_i).root.id && !item.children.empty? %>
+    <ul><%= render :partial => 'items/item', :collection => item.children %></ul>
   <% end %>  
 </li>
