Fixed error with index page not showing up. User can also now add item with blank body.

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -4,8 +4,7 @@
   <% else %>
     <%= link_to h(item.title), :controller => 'items', :action => 'show', :id => item.id %>
   <% end %>
-
-  <% if item.root.id == Item.find(params[:id].to_i).root.id && !item.children.empty? %>
+  <% if params[:id].to_i != 0 && item.root.id == Item.find(params[:id].to_i).root.id && !item.children.empty? %>
     <ul><%= render :partial => 'items/item', :collection => item.children %></ul>
   <% end %>  
 </li>
