--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -361,10 +361,11 @@ h3 {
 	width: 470px;
 }
 
-#datetimepicker {
-	margin-left: 10px;
+#datepicker {
+	margin-left: 5px;
+	margin-right: 3px;
 	margin-bottom: 10px;
-	width: 100px;
+	width: 65px;
 }
 
 #trigger_email_email_id {
@@ -454,17 +455,3 @@ footer {
 #footLink:hover{
 	text-decoration: underline;
 }
-
-/* css for timepicker: http://trentrichardson.com/examples/timepicker/ */
-
-.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
-.ui-timepicker-div dl { text-align: left; }
-.ui-timepicker-div dl dt { float: left; clear:left; padding: 0 0 0 5px; }
-.ui-timepicker-div dl dd { margin: 0 10px 10px 45%; }
-.ui-timepicker-div td { font-size: 90%; }
-.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
-
-.ui-timepicker-rtl{ direction: rtl; }
-.ui-timepicker-rtl dl { text-align: right; padding: 0 5px 0 0; }
-.ui-timepicker-rtl dl dt{ float: right; clear: right; }
-.ui-timepicker-rtl dl dd { margin: 0 45% 10px 10px; }
