--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,11 +14,13 @@
     <a class="set-email" href="#item<%= @item.id %>" title="Set Email Reminder" name="<%= @item.id %>"></a>
     <%= link_to '', item_path(@item.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item? (All subchildren will also be deleted)' }, class: 'delete itemDelete', title: 'Delete' %>
   </div>
+  <% unless @item.body.empty? %>
   <p><%= raw(@item.body) %></p>
+  <% end %>
   <% unless @item.triggers.empty? %>
   <% @item.triggers.each do |trigger| %> 
-  <% unless trigger.date_trigger + 8.hours <= Time.zone.today %>
-  <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= trigger.date_trigger.strftime("%d/%m/%Y %H:%M") %> AWST</p>
+  <% unless (trigger.date_trigger - 8.hours).to_date < Time.zone.today %>
+  <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= (trigger.date_trigger - 8.hours).to_datetime.strftime("%d/%m/%Y %H:%M") %> AWST</p>
   <div class = "emailOptions">
 	<%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete', title: 'Cancel' %>
   </div>
@@ -35,11 +37,13 @@
     <a class="set-email" href="#item<%= child.id %>" title="Set Email Reminder" name="<%= child.id %>"></a>
     <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item? (All subchildren will also be deleted)' }, class: 'delete itemDelete' , title: 'Delete' %>
   </div>
+  <% unless child.body.empty? %>
   <p><%= raw(child.body) %></p>
+  <% end %>
   <% unless child.triggers.empty? %>
   <% child.triggers.each do |trigger| %> 
-  <% unless trigger.date_trigger + 8.hours <= Time.zone.today %>
-  <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= trigger.date_trigger.strftime("%d/%m/%Y %H:%M") %> AWST</p>
+  <% unless trigger.date_trigger - 8.hours < Time.zone.today %>
+  <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= (trigger.date_trigger - 8.hours).to_datetime.strftime("%d/%m/%Y %H:%M") %> AWST</p>
   <div class = "emailOptions">
     <%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete', title: 'Cancel' %>
   </div>
@@ -68,7 +72,7 @@
 <%= form_tag({:controller => 'triggers', :action => 'create'}, {:id => "set-email-form"}) do %>
   <div id="leftEmailPane">
     <%= label_tag :datetimepicker, 'Date:' %>
-    <%= text_field_tag (:datetimepicker), '', {required: true, pattern: '(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d\s\d\d:\d\d'} %><small> AWST</small>
+    <%= text_field_tag (:datepicker), '', {required: true, pattern: '(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d'} %><small> 00:00 AWST</small>
     <%= label_tag :emailchildren, 'Send all subchildren too?' %>
     <%= check_box_tag(:emailchildren) %><%= hidden_field_tag(:parent_id, "") %>
   </div>
