--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -174,6 +174,11 @@ h2 {
 	color: red;
 }
 
+.emailList {
+	color: blue;
+	margin-bottom: 10px;
+}
+
 #itemToRoot, #currentItemOptions, #newEmail {
 	font-size: 14px;
 	text-align: right;
@@ -301,7 +306,7 @@ h2:hover {
 	box-shadow: rgb(0, 0, 0) 1px 1px 2px 0px;
 }
 
-p:hover + .emailOptions {
+p:hover + .emailOptions, .emailList:hover + .emailOptions {
 	opacity: 1;
 }
 
@@ -309,7 +314,7 @@ p:hover + .emailOptions {
 	opacity: 1;
 }
 
-.emailReminder:hover {
+.emailReminder:hover, .emailList:hover {
 	text-decoration: underline;
 }
 
