--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -8,3 +8,15 @@
     <input type="button" class="button" value="Cancel" onClick="history.go(-1); return true;" />
   </div>
 <% end %>
+
+<h3>Current Email List:</h3>
+<div>
+  <ul>
+  <% Email.all.each do |email| %>
+  <li class="emailList"><%= email.email %></li>
+  <div class = "emailOptions">
+	<%= link_to '', {:controller => 'emails', :action => 'destroy', :id => email.id}, method: :delete, data: { confirm: 'Are you sure you want to delete this email?' }, class: 'delete', title: 'Delete' %>
+  </div>
+  <% end %>
+  </ul>
+</div>
