--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.label :title, 'Title:' %>
   <%= f.text_field :title, required: true, maxlength: 100 %>
   <%= f.label :body, 'Body:' %>
-  <%= f.text_area :body, required: true, :placeholder => 'HTML tags are allowed!' %>
+  <%= f.text_area :body, :placeholder => 'HTML tags are allowed!' %>
   <%= f.label :task, 'Set As Task?' %>
   <%= f.check_box :task %>
   <%= hidden_field_tag 'item[parent_id]', params[:parent_id] %>
