Checkboxes are clickable

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -188,9 +188,20 @@ h2 {
 	margin-top: 0px;
 }
 
+/* css for item checkboxes */
+
 .itemCheckbox {
-	margin-left: -24px;
-	margin-right: 11px;
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	margin-left: -25px;
+	margin-right: 10px;
+	background: url(<%=asset_path "checkbox.png"%>) bottom;
+	text-indent: -99999px;
+}
+
+.tick {
+	background-position: 0 0;
 }
 
 /* css for option links */
