--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <div id="container">
     <header>
       <div id="itemsTitleDiv">
-        <%= link_to items_path do %><p id="title1">Swedish Club of WA</p>
+        <%= link_to items_path, title: 'Go To The Root' do %><p id="title1">Swedish Club of WA</p>
         <p id="title2">Club Process System</p><% end %>
       </div>
 	  <div id="timeTab">The current time in Perth is <%= Time.zone.now.strftime("%H:%M %d/%m/%Y") %></div>
