Delete the datetimepicker JS, causing issues with heroku

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -71,7 +71,7 @@
 
 <%= form_tag({:controller => 'triggers', :action => 'create'}, {:id => "set-email-form"}) do %>
   <div id="leftEmailPane">
-    <%= label_tag :datetimepicker, 'Date:' %>
+    <%= label_tag :datepicker, 'Date:' %>
     <%= text_field_tag (:datepicker), '', {required: true, pattern: '(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d'} %><small> 00:00 AWST</small>
     <%= label_tag :emailchildren, 'Send all subchildren too?' %>
     <%= check_box_tag(:emailchildren) %><%= hidden_field_tag(:parent_id, "") %>
