Hierarchy has small icons to indicate items that are tasks and have email reminders

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -152,6 +152,24 @@ ul {
 	list-style-type: circle;
 }
 
+.listEmail {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+
+	background: url(<%=asset_path "hierarchy_email.png"%>);
+	text-indent: -99999px;
+}
+
+.listTask {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+
+	background: url(<%=asset_path "hierarchy_checkbox.png"%>) bottom;
+	text-indent: -99999px;
+}
+
 /* css for main content pain and forms */
 
 h1 {
