Current item path is now indicated with filled circles

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li id="tree<%= item.id %>" name="<%= item.parent_id %>">
   <% if item.task %>
     <% if item.complete %>
 	<div class="listTask tick" title="<%= item.title %> is complete"></div>
