--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,4 +1,4 @@
-<h3 id="getThis" name="<%= @item.id %>">Editing Item</h3>
+<h3 id="itemId" name="<%= @item.id %>">Editing Item</h3>
 
 <%= form_for(@item, html: {class: "formCSS"}) do |f| %>
   <%= f.label :title, 'Title:' %>
