Hierarchy overflow is now hidden

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -82,7 +82,7 @@ header {
 /* css for content formatting */
 
 #main {
-	padding-left: 18px;
+	padding-left: 0px;
 	padding-top: 5px;
 	padding-bottom: 20px;
 	background: #FFFFFF;
@@ -97,7 +97,7 @@ header {
 #contentPane {
 	text-align: left; 
 	width: 740px; 
-	margin-left: 180px; 
+	margin-left: 198px; 
 	padding-left: 40px; 
 	border-left: 1px solid;
 }
@@ -105,9 +105,11 @@ header {
 #hierachyDiv {
 	float: left;
 	margin-top: 18px;
+	padding-left: 18px;
 	padding-right: 15px;
 	width: 165px;
 	border-right: 1px solid;
+	overflow: hidden;
 }
 
 /* log in form formatting */
