--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -42,7 +42,7 @@
   <% end %>
   <% unless child.triggers.empty? %>
   <% child.triggers.each do |trigger| %> 
-  <% unless trigger.date_trigger - 8.hours < Time.zone.today %>
+  <% unless (trigger.date_trigger - 8.hours).to_date < Time.zone.today %>
   <p class="emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= (trigger.date_trigger - 8.hours).to_datetime.strftime("%d/%m/%Y %H:%M") %> AWST</p>
   <div class="emailOptions">
     <%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete', title: 'Cancel' %>
